[package]
name = "api_http_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11",features = ["blocking", "json"]}
serde = { version = "1.0.139" , features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2" , features = ["full"] }